--- a/app/src/main/res/layout/content_merchant_back_office.xml
+++ b/app/src/main/res/layout/content_merchant_back_office.xml
@@ -9,41 +9,16 @@
     tools:showIn="@layout/activity_merchant_back_office">
 
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/merchant_back_office_container"
         android:layout_above="@+id/bottom_navigation_bar"
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:paddingLeft="5dp"
         android:paddingRight="5dp"
         android:paddingTop="32dp">
 
-        <TextView
-            android:id="@+id/bar_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/sales_overview"
-            android:textSize="16sp"
-            android:layout_marginBottom="20dp" />
-
-        <android.support.v7.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            card_view:cardUseCompatPadding="true"
-            android:id="@+id/chart_card_view"
-            android:layout_below="@+id/bar_title">
-
-            <com.github.mikephil.charting.charts.BarChart
-                android:id="@+id/chart"
-                android:layout_width="match_parent"
-                android:layout_height="300dp"
-                android:paddingBottom="@dimen/activity_vertical_margin"
-                android:paddingTop="@dimen/activity_vertical_margin"/>
-
-        </android.support.v7.widget.CardView>
-
-
-    </RelativeLayout>
+    </FrameLayout>
 
     <com.roughike.bottombar.BottomBar
         android:id="@+id/bottom_navigation_bar"
