--- a/app/src/main/res/layout/loyalty_program_list.xml
+++ b/app/src/main/res/layout/loyalty_program_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="co.loystar.loystarbusiness.activities.LoyaltyProgramListActivity" >
@@ -11,28 +12,63 @@
         android:id="@+id/loyalty_programs_rv"
         android:layout_height="match_parent" />
 
-    <LinearLayout
-        android:visibility="gone"
-        android:id="@+id/loyalty_programs_list_empty_container"
-        android:orientation="vertical"
-        android:layout_centerInParent="true"
+    <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
+        android:id="@+id/loyalty_programs_list_empty_container"
+        android:visibility="gone"
         android:layout_height="wrap_content">
 
+        <android.support.constraint.Guideline
+            android:id="@+id/guideline"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintGuide_begin="40dp" />
+
+        <ImageView
+            android:contentDescription="@string/image"
+            android:id="@+id/welcomeImage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/guideline"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent" />
+
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/welcomeText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/welcomeImage" />
+
+        <TextView
+            android:id="@+id/stateDescriptionText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
             android:gravity="center"
-            android:text="@string/no_programs_found"
-            android:textAppearance="?android:textAppearanceMedium"
-            android:layout_height="wrap_content" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/welcomeText" />
 
         <co.loystar.loystarbusiness.utils.ui.buttons.BrandButtonNormal
-            android:layout_marginTop="@dimen/activity_vertical_margin"
-            android:id="@+id/no_loyalty_program_add_program_btn"
-            android:text="@string/add_program"
-            android:layout_gravity="center_horizontal"
+            android:id="@+id/stateActionBtn"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="16dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/stateDescriptionText" />
+
+    </android.support.constraint.ConstraintLayout>
+
 
 </RelativeLayout>
