--- a/app/src/main/res/layout/activity_points_sale_with_pos.xml
+++ b/app/src/main/res/layout/activity_points_sale_with_pos.xml
@@ -29,7 +29,7 @@
         android:clickable="true"
         android:focusable="true"
         style="@style/Theme.ActionBar.HigherElevation"
-        app:behavior_hideable="true"
+        app:behavior_hideable="false"
         app:behavior_peekHeight="0dp"
         android:id="@+id/order_summary_bs_wrapper">
         <include layout="@layout/order_summary_bottom_sheet" />
