--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -33,4 +33,8 @@
         <attr name="backgroundDrawable"/>
     </declare-styleable>
 
+    <declare-styleable name="CartCountButton">
+        <attr name="backGroundColor" />
+    </declare-styleable>
+
 </resources>
