--- a/app/src/main/res/layout/content_bluetooth_devise_list.xml
+++ b/app/src/main/res/layout/content_bluetooth_devise_list.xml
@@ -20,6 +20,6 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:layout_centerInParent="true"
-        android:text="@string/no_data"/>
+        android:text="@string/no_bluetooth_devises_available"/>
 
 </RelativeLayout>
