--- a/app/src/main/res/layout/customer_detail.xml
+++ b/app/src/main/res/layout/customer_detail.xml
@@ -73,6 +73,8 @@
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
+            android:paddingTop="@dimen/card_list_padding"
+            android:paddingBottom="@dimen/card_list_padding"
             android:layout_height="wrap_content">
 
             <LinearLayout
