--- a/app/src/main/res/layout/pos_product_item.xml
+++ b/app/src/main/res/layout/pos_product_item.xml
@@ -74,7 +74,7 @@
 
         <LinearLayout
             android:id="@+id/product_decrement_wrapper"
-            android:visibility="gone"
+            android:visibility="visible"
             android:layout_width="match_parent"
             android:layout_height="25dp"
             android:clickable="true"
@@ -87,17 +87,15 @@
                 android:id="@+id/product_count"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="end"
-                android:background="?attr/selectableItemBackground"
-                android:paddingEnd="15dp"
-                android:paddingRight="15dp"
-                android:paddingStart="3dp"
-                android:paddingLeft="3dp"
+                android:layout_weight="1.3"
+                android:gravity="start"
+                android:paddingEnd="1dp"
+                android:paddingRight="1dp"
+                android:paddingStart="1dp"
+                android:paddingLeft="1dp"
                 android:clickable="true"
                 android:focusable="true"
                 android:textAppearance="?android:textAppearanceMedium"
-                android:layout_gravity="end"
                 android:textColor="@android:color/holo_red_dark"/>
 
             <ImageView
@@ -105,9 +103,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:id="@+id/decrement_count"
-                android:layout_weight="1"
-                android:layout_gravity="start"
-                android:background="?attr/selectableItemBackground"
+                android:layout_weight="0.7"
+                android:layout_gravity="end"
                 android:clickable="true"
                 android:focusable="true"
                 android:tint="@android:color/holo_red_dark"/>
