--- a/app/src/main/res/layout/content_authenticator_activity.xml
+++ b/app/src/main/res/layout/content_authenticator_activity.xml
@@ -30,7 +30,8 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textAlignment="center"
+            android:layout_gravity="center_horizontal"
+            android:gravity="center"
             android:text="@string/signing_in_msg"/>
 
     </LinearLayout>
