--- a/app/src/main/res/layout/international_phone_input.xml
+++ b/app/src/main/res/layout/international_phone_input.xml
@@ -3,7 +3,7 @@
     android:orientation="horizontal" android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <co.loystar.loystarbusiness.utils.ui.InternationalPhoneInput.CountryPhoneSpinner
+    <Spinner
         android:layout_width="40dp"
         android:layout_height="wrap_content"
         android:paddingEnd="1dp"
